View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023595 | Community | OCCT:Data Exchange | public | 2012-11-28 13:41 | 2014-10-09 18:39 |
Reporter | Roman Lygin | Assigned To | Roman Lygin | ||
Priority | normal | Severity | integration request | ||
Status | closed | Resolution | fixed | ||
Platform | A | OS | L | ||
Product Version | 6.5.4 | ||||
Target Version | 6.6.0 | Fixed in Version | 6.6.0 | ||
Summary | 0023595: XCAFDoc_ShapeTool extended with two methods - SetAutoNaming() and AutoNaming() | ||||
Description | Auto-naming is used to auto-generate names for (sub-)shapes. Prior to the fix it was controlled by a pre-processor macro (#define AUTONAMING), which was defined in XCAFDoc_ShapeTool.cxx. Thus, the XDE document was contaminated with names not present in the original imported files. The fix makes it a run-time parameter which is on by default, preserving previous behavior. It had to be made a static member function as it is used by other static members. | ||||
Steps To Reproduce | See enclosed test case | ||||
Tags | No tags attached. | ||||
Test case number | bugs xde(005) bug23595 | ||||
|
XCAFDoc_ShapeToolTest.zip (607 bytes) |
|
Pushed branch CR23595 into the git repository |
|
Branch CR23595 is ready to be reviewed. |
|
Dear BugMaster, Branch CR23595 (and products from GIT master) was compiled on Linux and Windows platforms and tested. Regressions: Not detected Improvements: Not detected Testing cases: bugs xde(005) bug23595 - OK. |
occt: master e6aad0ee 2012-12-28 14:02:51 Details Diff |
0023595: XCAFDoc_ShapeTool extended with two methods - SetAutoNaming() and AutoNaming() Adding new draw command Adding test case for this fix Small correction Small correction |
Affected Issues 0023595 |
|
mod - src/QABugs/QABugs_19.cxx | Diff File | ||
mod - src/XCAFDoc/XCAFDoc_ShapeTool.cdl | Diff File | ||
mod - src/XCAFDoc/XCAFDoc_ShapeTool.cxx | Diff File | ||
add - tests/bugs/xde/bug23595 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2012-11-28 13:41 | Roman Lygin | New Issue | |
2012-11-28 13:41 | Roman Lygin | Assigned To | => gka |
2012-11-28 13:41 | Roman Lygin | File Added: XCAFDoc_ShapeToolTest.zip | |
2012-11-28 13:44 | Roman Lygin | Note Added: 0022407 | |
2012-11-28 13:44 | Roman Lygin | Status | new => resolved |
2012-11-28 17:39 | gka | Note Added: 0022418 | |
2012-11-28 17:39 | gka | Status | resolved => reviewed |
2012-11-28 18:27 |
|
Assigned To | gka => mkv |
2012-12-25 11:35 |
|
Note Added: 0022825 | |
2012-12-25 11:36 |
|
Test case number | => bugs xde(005) bug23595 |
2012-12-25 11:36 |
|
Assigned To | mkv => bugmaster |
2012-12-25 11:36 |
|
Status | reviewed => tested |
2013-01-04 11:35 | Roman Lygin | Changeset attached | => occt master e6aad0ee |
2013-01-04 11:35 | Roman Lygin | Assigned To | bugmaster => Roman Lygin |
2013-01-04 11:35 | Roman Lygin | Status | tested => verified |
2013-01-04 11:35 | Roman Lygin | Resolution | open => fixed |
2013-02-20 10:19 | bugmaster | Target Version | => 6.6.0 |
2013-04-23 13:36 |
|
Status | verified => closed |
2013-04-29 15:22 |
|
Fixed in Version | => 6.6.0 |
2014-10-09 18:39 | abv | Relationship added | has duplicate 0022599 |