0023595: XCAFDoc_ShapeTool extended with two methods - SetAutoNaming() and AutoNaming() Adding new draw command Adding test case for this fix Small correction Small correction